# KnowledgeHub

./: .dockerignore  .gitignore  README.md  docker-compose.yml
book_catalog_api/: Dockerfile  pyproject.toml
book_catalog_api/app/: main.py
book_catalog_api/app/api/routers/: ai_routers.py  book_routers.py  health_routers.py
book_catalog_api/app/core/: database.py
book_catalog_api/app/repositories/: book_service.py
book_catalog_api/app/services/semantic_search/data/: documents.json
book_catalog_api/app/services/semantic_search/data/vectorstore/: index.faiss  index.pkl
book_catalog_api/app/services/semantic_search/embeddings/: config.py
book_catalog_api/app/services/semantic_search/repositories/: document_loader.py  vector_store.py
book_catalog_api/app/services/semantic_search/schemas/: __init__.py  search.py
book_catalog_api/app/services/semantic_search/services/: ingest.py  search.py
knowledge_hub/: Dockerfile  README.md
knowledge_hub/app/core/: config.py
knowledge_hub/app/integrations/: ai_backend.py
knowledge_hub/app/schemas/: ai_schemas.py
knowledge_hub/app/services/semantic_search/config/: settings.py
knowledge_hub/app/services/semantic_search/services/: semantic_search.py
knowledge_hub/tests/: conftest.py
streamlit_hub/: Dockerfile  README.md  app.py  pyproject.toml
